# QRS

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
builders/: ExprNodeBuilder.cpp  ExprNodeBuilder.h
doc/html/: _arithmetic_node_8cpp.html  _arithmetic_node_8h.html  _arithmetic_node_8h_source.html  _builder_utils_8cpp.html  _builder_utils_8h.html  _builder_utils_8h_source.html  _constant_expr_node_8cpp.html  _constant_expr_node_8h.html  _constant_expr_node_8h_source.html  _d_1_2programms_2_cpp_2_q_r_s_2src_2entities_2_arithmetic_2_arithmetic_node_8h-example.html  _d_1_2programms_2_cpp_2_q_r_s_2src_2utils_2_builder_utils_8h-example.html  _exceptions_8cpp.html  _exceptions_8h.html  _exceptions_8h_source.html  _expr_node_8cpp.html  _expr_node_8h.html  _expr_node_8h_source.html  _expr_node_builder_8cpp.html  _expr_node_builder_8h.html  _expr_node_builder_8h_source.html  _generator_8cpp.html  _generator_8h.html  _generator_8h_source.html  _logical_node_8cpp.html  _logical_node_8h.html  _logical_node_8h_source.html  _operand_8cpp.html  _operand_8h.html  _operand_8h_source.html  _operation_8cpp.html  _operation_8h.html  _operation_8h_source.html  _test_utils_8cpp.html  _test_utils_8h.html  _test_utils_8h_source.html  _utils_8cpp.html  _utils_8h.html  _utils_8h_source.html  _xD0_x9A_xD0_xBE_xD0_xBD_xD1_x81_xD1_x82_xD0_xB0_xD0_xBD_xD1_x82_xD0_xBD_xD0_xBE_xD0_xB5-example.html  _xD0_x9E_xD0_xB4_xD0_xB8_xD0_xBD_xD0_xB0_xD0_xBA_xD0_xBE_xD0_xB2_xD1_x8B_xD0_xBC_xD0_xB8-example.html  (+53 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+39 more)
entities/: Exceptions.cpp  Exceptions.h  ExprNode.cpp  ExprNode.h
entities/ExprNodeImpl/: ArithmeticNode.cpp  ArithmeticNode.h  ConstantExprNode.cpp  ConstantExprNode.h  LogicalNode.cpp  LogicalNode.h  VarExprNode.cpp  VarExprNode.h
src/: CMakeLists.txt  main.cpp
src/builders/: ExprNodeBuilder.cpp  ExprNodeBuilder.h
src/entities/: ExprNode.cpp  ExprNode.h  Operand.cpp  Operand.h  Operation.cpp  Operation.h
src/entities/Arithmetic/: ArithmeticNode.cpp  ArithmeticNode.h
src/entities/Constant/: ConstantExprNode.cpp  ConstantExprNode.h
src/entities/Logical/: LogicalNode.cpp  LogicalNode.h
src/exception/: BuildExceptions.cpp  BuildExceptions.h  Exceptions.cpp  Exceptions.h
src/truthtablegererator/: Generator.cpp  Generator.h
src/utils/: BuilderUtils.cpp  BuilderUtils.h  Utils.cpp  Utils.h
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  test_buildExprNode.cpp  test_calculate.cpp  test_compareExprTree.cpp  test_createRow.cpp  test_generateTable.cpp  test_getParameters.cpp  test_main.cpp  test_toString.cpp
tests/TestIO/: run_tests.bat
tests/TestIO/tests/: exp_1.html  exp_10.html  exp_11.html  exp_12.html  exp_13.html  exp_14.html  exp_15.html  exp_16.html  exp_2.html  exp_3.html  exp_5.html  exp_6.html  exp_7.html  exp_8.html  exp_9.html  exp_non_existent_file.html  in_1.txt  in_10.txt  in_11.txt  in_12.txt  in_13.txt  in_16.txt  in_2.txt  in_3.txt  in_4.txt  in_5.txt  in_6.txt  in_7.txt  in_8.txt
utils/: BuilderUtils.cpp  BuilderUtils.h
